second track plus spacing fixes

--- a/2018/sass/main.scss
+++ b/2018/sass/main.scss
@@ -702,13 +702,21 @@ html, body {
         justify-items: center;
         padding-bottom: 5%;
         background-color: $background-color;
+        font-family: $font-fam;
+        color: $small-text-color;
         #track1 {
+            height: 20rem;
+            width: 25rem;
             background-color: #fff;
             grid-area: track1;
             h2 {
                 font-size: $subsection-size;
+                color: $small-text-color;
             }
             .imgrow {
+                
+                position: relative;
+                bottom: 2rem;
                 display: flex;
                 img {
                     padding: 0.5rem;
@@ -720,19 +728,18 @@ html, body {
         }
 
         #track2 {
-            //background-color: #fff;
+            background-color: #fff;
+            height: 20rem;
+            width: 25rem;
             grid-area: track2;
             h2 {
                 font-size: $subsection-size;
+                color: $small-text-color;
             }
-            .imgrow {
-                display: flex;
-                img {
-                    padding: 0.5rem;
-                    width: 40%;
-                    height: 40%;
-                    flex: 40%;
-                }
+            img {
+                width: 12.50vw * 1.5;
+                height: 2.75vw * 1.5;
+                margin-top: 2rem;
             }
         }
         #track3 {
@@ -787,17 +794,17 @@ html, body {
   .track-info {
         z-index: 4;
         background-color: #ffff;
-        width: 70%;
-        height: 70%;
+        width: 80%;
+        height: 80%;
         @extend %center;
         display: none;
         position: fixed;
         box-sizing: border-box;
         background-color: $background-color;
-        top: 15%;
+        top: 10%;
         font-family: $font-fam;
         color: $small-text-color;
-        left: 15%;
+        left: 10%;
         .close {
             float: right;
             margin: 1rem;
@@ -810,6 +817,8 @@ html, body {
             display: flex;
             align-items: center;
             height: 100%;
+            position: relative;
+            right: 1.5%;
             .track-column {
                 h1 {
                     padding: 3rem 0 2rem  0;
